# callm

./: .gitignore  README.md  app.py  gemini_model.py  local_model.py  pyproject.toml  requirements.txt
dev_notes/: bugs.md
